<resources>
    <string name="app_name">AndroidProjectPOCs</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="speech_prompt">Say something&#8230;</string>
    <string name="speech_not_supported">Sorry! Your device doesn\'t support speech input</string>
    <string name="tap_on_mic">Tap on mic to speak</string>
    <string name="open">Open</string>
    <string name="close">Close</string>
    <string name="appwidget_text">EXAMPLE</string>
    <string name="add_widget">Add widget</string>


    <string name="welcome">Welcome!</string>
    <string name="email">Email Address</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="signup">Don\'t have account? Sign Up</string>

    <string name="hello">Hello\nProject is working now</string>
    <string name="text2">This is just another text view</string>
    <string name="text1">This is dark theme example project</string>
</resources>
